--- a/_site.yml
+++ b/_site.yml
@@ -1,19 +1,21 @@
 name: "Javi's site"
 navbar:
-  title: "Welcome"
+  title: "Javier Fernández-López"
   left:
     - text: "Home"
       icon: fa-home
       href: index.html
-    - text: "Tutorials"
-      href: Tutorials.html
     - text: "Research"
       href: Research.html
-    - text: "Links"
-      href: Links.html
+    - text: "Publications"
+      href: index.html
+    - text: "Outreach"
+      href: index.html
+    - text: "People"
+      href: index.html
+    - text: "Tutorials"
+      href: Tutorials.html
     - text: "Máster UCLM"
       href: masterUCLM.html
-    - text: "EURING"
-      href: euring.html
 output_dir: "docs"
 
