--- a/_site.yml
+++ b/_site.yml
@@ -8,7 +8,7 @@ navbar:
     - text: "Research"
       href: Research.html
     - text: "Publications"
-      href: Research.html
+      href: Publications.html
     - text: "Outreach"
       href: Outreach.html
     - text: "People"
